		badmail area.
		Echomail received from not connected nodes is stored in the
		badmail area unless the area allowes it.
		Can now send (hopefully) valid uplink requests to BBBS systems.
		Removed some debug logging from un_attach, made one into a
		normal logmessage.
		The postemail and scanemail functions are changed so that
		Outlook email addresses are parsed so that we can reply via
		smtp.

	mbfile:
		The html index now uses html named character entities on the
		area names on the main index page.
		With html index creation if the convert program for the
		thumbnails failed, the html pages were wrong.
		The thumbnails were created from the 8.3 name but the url was
		created to the LFN. Depending on the settings of your apache
		server you would see the thumbnails or not.
		The check for wrong thumbnails changed from LFN to 8.3 names.

	mbindex:
		Fixed compiling pointlists where on the Boss line there is no
		last comma on the line.

	mbmsg:
		Fixed counter in log that should show the number of linked 
		messages.
		With the post command a check is done to see if the input file
		has a tearline and origin line, if not mbmsg will add these
		lines, else the lines of the input file are used.

	mbsebbs:
		The exec_nosuid function for doors now also has a extra small
		delay just like all other execute functions to prevent problems
		on fast machines.
		Added extra fflush in quickscan mail.
		When calling the external editor, the fromaddress if available
		is given to joe.
		In Quick_Bye reset all signal handlers to prevent that die() is
		called in case something goes wrong during Quick_Bye.
		The fake nodenumber is now obtained from mbtask instead of a
		count of tty line records so the used nodenumbers will be a lot
		lower then before.

	mbnewusr:
		During program exit, it tried to remove the wrong socket to
		mbtask.

	mbuser:
		Fixed permissions.

	mbtask:
		Tried to call nodes during ZMH or during a Tyx window when mail
		was on hold.